# awise

./: Cargo.toml
src/: main.rs  resources.rs  scenes.rs
src/components/: mod.rs  playerinputcontroller.rs  sprite.rs  transform.rs
src/prefabs/: mod.rs  player.rs  region.rs  tileset.rs
src/scenes/: mainscene.rs  mod.rs
