[package]
name = "awise"
version = "0.1.0"
authors = ["corbuntus <corbuntus@null.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hecs = "0.2.14"
# legion = "0.2.4"
# recs = "2.0.1"
sdl2 = { version = "0.34.2", features = ["gfx", "unsafe_textures"] }
